<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.tinspin</groupId>
	<artifactId>tinspin-indexes</artifactId>
	<packaging>jar</packaging>
	<version>2.1.5-SNAPSHOT</version>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<name>tinspin-indexes</name>
	<description>TinSpin in-memory index library</description>
	<url>https://github.com/tzaeschke/tinspin-indexes</url>
	<licenses>
	    <license>
	        <name>Apache License, Version 2.0</name>
    	    <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
            <comments>A business-friendly OSS license</comments>
		</license>
	</licenses>
	<scm>
		<url>https://github.com/tzaeschke/tinspin-indexes</url>
		<connection>scm:git:git@github.com:tzaeschke/tinspin-indexes.git</connection>
		<developerConnection>scm:git:git@github.com:tzaeschke/tinspin-indexes.git</developerConnection>
      <tag>HEAD</tag>
  </scm>
	<developers>
		<developer>
			<name>Tilmann Zäschke</name>
			<id>tzaeschke</id>
			<email>zoodb@gmx.de</email>
		</developer>
	</developers>
	<issueManagement>
		<system>github</system>
		<url>https://github.com/tzaeschke/tinspin-indexes/issues</url>
	</issueManagement>

	<distributionManagement>
		<snapshotRepository>
			<id>sonatype-snapshots</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>sonatype-nexus-staging</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>
	
	<profiles>
		<profile>
			<!-- 
			  This profile is automatically enabled for mvn release:perform
			  thanks to the releaseProfiles configuration defined for
			  the maven-release-plugin
			-->
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>3.1.0</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>[4.13,)</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>ch.ethz.globis.phtree</groupId>
			<artifactId>phtree</artifactId>
			<version>[2.8.0,)</version>
		</dependency>
		<dependency>
			<groupId>org.tinspin</groupId>
			<artifactId>tinspin-common</artifactId>
			<version>[1.2,)</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>3.6.3</version>
				<executions>
					<execution>
						<id>enforce-maven</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>3.6.3</version>
								</requireMavenVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.15.0</version>
				<configuration>
					<release>11</release>
					<compilerArgument>-Xlint:deprecation</compilerArgument>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.4.0</version>
				<configuration>
					<argLine>@{argLine} -Xmx512m</argLine>
					<printSummary>true</printSummary>
					<!--  <skipTests>false</skipTests>  -->
  				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>3.2.8</version>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>verify</phase>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
    		</plugin>
			<plugin>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.4.0</version>
				<executions>
					<execution>
						<id>jcabi-sources</id>
						<configuration>
							<forceCreation>true</forceCreation>
						</configuration>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<!--
                Generate -javadoc.jar artifact, required by Maven Central.
                -->
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.12.0</version>
				<executions>
					<execution>
						<id>jcabi-javadoc</id>
						<phase>package</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.sonatype.plugins</groupId>
				<artifactId>nexus-staging-maven-plugin</artifactId>
				<version>1.7.0</version>
				<extensions>true</extensions>
				<configuration>
					<serverId>ossrh</serverId>
					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
					<autoReleaseAfterClose>true</autoReleaseAfterClose>
				</configuration>
			</plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>3.3.1</version>
				<configuration>
					<releaseProfiles>release</releaseProfiles>
				</configuration>
            </plugin>
			<plugin>
  				<groupId>org.jacoco</groupId>
  				<artifactId>jacoco-maven-plugin</artifactId>
  				<version>0.8.15</version>
  				<executions>
    				<execution>
      					<goals>
	        				<goal>prepare-agent</goal>
      					</goals>
    				</execution>
    				<execution>
      					<id>report</id>
      					<phase>test</phase>
      					<goals>
	        				<goal>report</goal>
      					</goals>
    				</execution>
  				</executions>
			</plugin>
		</plugins>
	</build>

</project>

